--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,13 +1,13 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".MainActivity">
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/elementsSwipeRefreshLayout"
+    android:layout_height="fill_parent"
+    android:layout_width="fill_parent">
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:id="@+id/lvElements"
+            android:layout_centerHorizontal="true"
+            android:padding="16dp" />
 
-    <ListView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/lvElements"
-        android:layout_centerHorizontal="true"
-        android:padding="16dp" />
-
-</RelativeLayout>
+</android.support.v4.widget.SwipeRefreshLayout>
