--- a/app/src/main/res/layout/activity_stupla.xml
+++ b/app/src/main/res/layout/activity_stupla.xml
@@ -1,7 +1,8 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context="com.timodenk.gswnstupla.StuplaActivity">
+<android.support.v4.widget.SwipeRefreshLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/swipeRefreshLayout"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <WebView
         android:layout_width="fill_parent"
@@ -9,5 +10,7 @@
         android:id="@+id/wvStupla"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
-        android:focusableInTouchMode="false" />
-</RelativeLayout>
+        android:layout_alignParentLeft="true"
+        android:focusableInTouchMode="true" />
+
+</android.support.v4.widget.SwipeRefreshLayout>
