--- a/app/src/main/res/layout/activity_stupla.xml
+++ b/app/src/main/res/layout/activity_stupla.xml
@@ -1,12 +1,12 @@
 <android.support.v4.widget.SwipeRefreshLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:id="@+id/swipeRefreshLayout"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:layout_width="match_parent">
 
     <WebView
-        android:layout_width="fill_parent"
-        android:layout_height="fill_parent"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:id="@+id/wvStupla"
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
