--- a/app/src/main/res/menu/menu_stupla.xml
+++ b/app/src/main/res/menu/menu_stupla.xml
@@ -2,12 +2,14 @@
     xmlns:com.timodenk.gswnstupla="http://schemas.android.com/apk/res-auto">
     <item
         android:id="@+id/previous_week"
-        android:icon="@drawable/ic_keyboard_arrow_left_white_48dp"
+        android:icon="@drawable/ic_transparent_48dp"
         android:title="@string/previous_week"
+        android:enabled="false"
         com.timodenk.gswnstupla:showAsAction="ifRoom"/>
     <item
         android:id="@+id/next_week"
-        android:icon="@drawable/ic_keyboard_arrow_right_white_48dp"
+        android:icon="@drawable/ic_transparent_48dp"
         android:title="@string/next_week"
+        android:enabled="false"
         com.timodenk.gswnstupla:showAsAction="ifRoom"/>
 </menu>
