--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,12 +3,60 @@
     android:id="@+id/elementsSwipeRefreshLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
-
-    <ListView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/lvElements"
-        android:layout_centerHorizontal="true"
-        android:padding="16dp" />
+        android:orientation="vertical">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/loading_element_list"
+                    android:id="@+id/tvMessage"
+                    android:visibility="invisible"
+                    android:padding="16dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="48dp"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/tvSwipeDownMessage"
+                    android:layout_gravity="center_horizontal"
+                    android:visibility="invisible"
+                    android:text="@string/swipe_down_to_retry"
+                    android:layout_below="@+id/tvMessage"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="36dp"
+                    android:padding="16dp"
+                    android:textAlignment="center"
+                    android:gravity="center"/>
+
+                <ListView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/lvElements"
+                    android:drawSelectorOnTop="true"
+                    android:fastScrollEnabled="false"
+                    android:fastScrollAlwaysVisible="false"
+                    android:padding="16dp"
+                    android:visibility="visible"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentLeft="true"
+                    android:layout_alignParentStart="true"/>
+
+            </RelativeLayout>
+        </ScrollView>
+    </LinearLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
