Error messages for WebView in StuplaActivity
Added ObservableWebView class to disable the SwipeRefreshLayout when
the user scrolls the WebView. Added error messages e.g. when the user
has no internet connection.

--- a/app/src/main/res/layout/activity_stupla.xml
+++ b/app/src/main/res/layout/activity_stupla.xml
@@ -3,14 +3,55 @@
     android:id="@+id/swipeRefreshLayout"
     android:layout_height="match_parent"
     android:layout_width="match_parent">
-
-    <WebView
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/wvStupla"
-        android:layout_alignParentTop="true"
-        android:layout_alignParentStart="true"
-        android:layout_alignParentLeft="true"
-        android:focusableInTouchMode="true" />
+        android:orientation="vertical">
+        <ScrollView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:fillViewport="true">
+            <RelativeLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent" >
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:text="@string/loading_element_list"
+                    android:id="@+id/tvMessage"
+                    android:visibility="invisible"
+                    android:padding="16dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="48dp"
+                    android:gravity="center"/>
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textAppearance="?android:attr/textAppearanceSmall"
+                    android:id="@+id/tvSwipeDownMessage"
+                    android:layout_gravity="center_horizontal"
+                    android:visibility="invisible"
+                    android:text="@string/swipe_down_to_retry"
+                    android:layout_below="@+id/tvMessage"
+                    android:layout_centerHorizontal="true"
+                    android:layout_marginTop="36dp"
+                    android:padding="16dp"
+                    android:textAlignment="center"
+                    android:gravity="center"/>
+
+                <com.timodenk.view.ObservableWebView
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:id="@+id/wvStupla"
+                    android:layout_alignParentTop="true"
+                    android:layout_alignParentStart="true"
+                    android:layout_alignParentLeft="true"
+                    android:focusableInTouchMode="true" />
+            </RelativeLayout>
+        </ScrollView>
+    </LinearLayout>
 
 </android.support.v4.widget.SwipeRefreshLayout>
